feat: updated config with health check and network settings

--- a/.docker/docker-compose.yml
+++ b/.docker/docker-compose.yml
@@ -6,8 +6,16 @@ services:
     env_file:
       - ../.env/db.env
     image: 'postgres:latest'
+    healthcheck:
+      test: ['CMD-SHELL', 'pg_isready -U postgres']
+      interval: 10s
+      timeout: 5s
+      retries: 5
     ports:
       - '5432:5432'
+    networks:
+      - journey-api
+    restart: unless-stopped
   journey-api:
     container_name: journey-api
     env_file:
@@ -19,3 +27,12 @@ services:
       - ../.:/go/src/github.com/golang-journey-api
     ports:
       - '8080:8080'
+    depends_on:
+      journey-db:
+        condition: service_healthy
+    networks:
+      - journey-api
+    restart: unless-stopped
+networks:
+  journey-api:
+    driver: bridge
